--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
   </div>
 
   <!-- Here the main body starts where all the sections are divided into several divs: intro, research,MarketAnalysis,working,so on... -->
-  <div id="home" class="intro section">
+  <div id="home" class="intro section" data-aos= "fade-up">
     <div class="head">
-      <h1>Hi, We are from Gradient</h1>
+      <h1 >Hi, We are from Gradient</h1>
     </div>
-    <div class="intro-info">
+    <div class="intro-info" data-aos= "fade-up">
       <p>Pellentesque habitant morbi tristique senectus et netus et malesuada
         fames ac turpis egestas. Ut arcu libero, pulvinar non massa sed,
         accumsan scelerisque dui. Morbi purus mauris, vulputate quis felis nec, </p>
@@ -83,18 +83,18 @@
   <!-- research div  -->
   <div id="research" class="research section">
     <div class="head mobile">
-      <h1>Research</h1>
+      <h1 data-aos= "fade-up">Research</h1>
     </div>
 
-    <img src="Images/research.svg" alt="reaserch-img">
+    <img data-aos= "fade-up" src="Images/research.svg" alt="reaserch-img">
 
     <div class="matter">
 
       <div class="head desktop">
-        <h1>Research</h1>
+        <h1 data-aos= "fade-up">Research</h1>
       </div>
 
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+      <p data-aos= "fade-up">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
         Ipsum has been the industry's standard dummy text ever since the </p>
     </div>
   </div>
@@ -102,23 +102,23 @@
   <!-- MarketAnalysis div  -->
   <div id="Market-analysis" class="Market-analysis">
     <div class="head mobile">
-      <h1>Market Analysis</h1>
+      <h1 data-aos= "fade-up">Market Analysis</h1>
     </div>
-    <img class="mobile" src="Images/market analysis.svg" alt="MarketAnalysis-img">
+    <img data-aos= "fade-up" class="mobile" src="Images/market analysis.svg" alt="MarketAnalysis-img">
 
 
     <div class="matter">
       <div class="head desktop">
-        <h1>Market Analysis</h1>
+        <h1 data-aos= "fade-up">Market Analysis</h1>
       </div>
 
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+      <p data-aos= "fade-up">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
         Ipsum has been the industry's standard dummy text ever since thes</p>
 
     </div>
 
 
-    <img class="desktop" src="Images/market analysis.svg" alt="MarketAnalysis-img">
+    <img data-aos= "fade-up" class="desktop" src="Images/market analysis.svg" alt="MarketAnalysis-img">
 
   </div>
 
@@ -129,44 +129,44 @@
     </div>
     <br>
     <div class="info">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+      <p data-aos= "fade-up">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
         Ipsum has been the industry's standard dummy text ever since the 1500s</p>
     </div>
     <br>
     <div class="workinfo-mobile mobile">
 
-      <div class="sub">
+      <div class="sub" data-aos= "fade-up">
         <div class="one1">
           <h2>Concept</h2>
         </div>
       </div>
-      <div class="sub">
+      <div class="sub" data-aos= "fade-up">
         <div class="two2">
           <h2>Budget</h2>
         </div>
 
       </div>
-      <div class="sub">
+      <div class="sub" data-aos= "fade-up">
         <div class="three3">
           <h2>Demonstrate</h2>
         </div>
 
       </div>
-      <div class="sub">
+      <div class="sub" data-aos= "fade-up">
         <div class="four4">
           <h2>Development</h2>
         </div>
 
       </div>
-      <div class="sub">
+      <div class="sub" data-aos= "fade-up">
         <div class="five5">
           <h2>Launch</h2>
         </div>
 
       </div>
     </div>
-    <div class="workinfo desktop">
-      <div class="subinfo">
+    <div class="workinfo desktop" data-aos= "fade-up">
+      <div class="subinfo" data-aos= "fade-up">
         <div class="one">
           <h2>Concept</h2>
         </div>
@@ -176,7 +176,7 @@
             printing and typesetting</p>
         </div>
       </div>
-      <div class="subinfo">
+      <div class="subinfo" data-aos= "fade-up">
         <div class="two">
           <h2>Demonstrate</h2>
         </div>
@@ -186,7 +186,7 @@
             printing and typesetting</p>
         </div>
       </div>
-      <div class="subinfo">
+      <div class="subinfo" data-aos= "fade-up">
         <div class="three">
           <h2>Budget</h2>
         </div>
@@ -196,7 +196,7 @@
             printing and typesetting</p>
         </div>
       </div>
-      <div class="subinfo">
+      <div class="subinfo" data-aos= "fade-up">
         <div class="four">
           <h2>Development</h2>
         </div>
@@ -206,7 +206,7 @@
             printing and typesetting</p>
         </div>
       </div>
-      <div class="subinfo">
+      <div class="subinfo" data-aos= "fade-up">
         <div class="five">
           <h2>Launch</h2>
         </div>
@@ -228,13 +228,13 @@
     </div>
     <br>
     <div class="our-info">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the , when an</p>
+      <p data-aos= "fade-up">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the , when an</p>
     </div>
     <br><br><br>
-    <!-- in cardbody there are different elements of cards with the class column which can be modified individually -->
+    <!-- in cardbody there are different elements of cards with the class column  which can be modified individually -->
     <div class="cardbody">
       <div class="row">
-        <div class="column">
+        <div class="column" data-aos= "fade-up">
           <div class="card">
             <div class="card-img">
               <img src="Images/team.jpg" alt="">
@@ -251,7 +251,7 @@
           </div>
         </div>
 
-        <div class="column">
+        <div class="column" data-aos= "fade-up">
           <div class="card">
             <div class="card-img">
               <img src="Images/frontend.jpg" alt="">
@@ -269,7 +269,7 @@
           </div>
         </div>
 
-        <div class="column">
+        <div class="column" data-aos= "fade-up">
           <div class="card">
             <div class="card-img">
               <img src="Images/htmlimg.jpg" alt="">
@@ -297,11 +297,11 @@
     </div>
     <br>
     <div class="our-info">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting </p>
+      <p data-aos= "fade-up">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
 
     </div>
     <br>
-    <div class="protfolio-tabs">
+    <div class="protfolio-tabs" data-aos= "fade-up">
       <ul class='tabs'>
         <li><a><button onclick="active(1)" class="tbtn active">ALL</button></a></li>
         <li><a><button onclick="active(2)" class="tbtn">UI Design</button></a></li>
@@ -312,7 +312,7 @@
     <br>
     <div class="protfolio-images">
 
-      <div class="container">
+      <div class="container" data-aos= "fade-up">
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
 
@@ -321,7 +321,7 @@
 
       </div>
     </div>
-      <div class="container">
+      <div class="container" data-aos= "fade-up">
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
                     <div class="text">John Doe</div>
@@ -329,7 +329,7 @@
 
       </div>
       </div>
-      <div class="container">
+      <div class="container" data-aos= "fade-up">
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
           <div class="text">John Doe</div>
@@ -337,7 +337,7 @@
 
       </div>
       </div>
-      <div class="container">
+      <div class="container" data-aos= "fade-up" >
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
           <div class="text">John Doe</div>
@@ -345,7 +345,7 @@
 
       </div>
       </div>
-      <div class="container">
+      <div class="container" data-aos= "fade-up">
         <img src="Images/frontend.jpg" alt="Avatar" class="image">
         <div class="middle">
           <div class="text">John Doe</div>
@@ -364,13 +364,13 @@
     </div>
     <br>
     <div class="our-info">
-      <p>Lorem Ipsum is simply dummy text of the printing and </p>
+      <p data-aos= "fade-up">Lorem Ipsum is simply dummy text of the printing and </p>
 </div>
     <br><br>
     <div class="team-cards">
-      <div class="cardbody">
+      <div class="cardbody" >
         <div class="row">
-          <div class="column">
+          <div class="column" data-aos= "fade-up">
             <div class="card">
               <div class="card-img teamimg">
                 <img src="Images/person.jpg" alt="">
@@ -385,13 +385,13 @@
               <img style="cursor: pointer;width: 2rem; display:block; padding-right: 1rem;" src="Images/instagram-brands.svg" alt="">
               <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedin-in-brands.svg" alt="">
               <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
-
+              
             </div>
 
             </div>
           </div>
 
-          <div class="column">
+          <div class="column" data-aos= "fade-up">
             <div class="card">
               <div class="card-img teamimg">
                 <img src="Images/person.jpg" alt="">
@@ -407,14 +407,14 @@
               <img style="cursor: pointer;width: 2rem; display:block; padding-right: 1rem;" src="Images/instagram-brands.svg" alt="">
               <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedin-in-brands.svg" alt="">
               <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
-
+              
             </div>
 
 
             </div>
           </div>
 
-          <div class="column">
+          <div class="column" data-aos= "fade-up">
             <div class="card">
               <div class="card-img teamimg">
                 <img src="Images/person.jpg" alt="">
@@ -444,10 +444,10 @@
     </div>
     <br>
     <div class="our-info">
-      <p>Lorem Ipsum is simply dummy text of the 1500s, when an</p>
+      <p data-aos= "fade-up">Lorem Ipsum is simply dummy text of the 1500s, when an</p>
     </div>
     <br><br>
-    <div class="testimonials-corousel">
+    <div class="testimonials-corousel" data-aos= "fade-up">
       <div class="left-arrow">
         <div> <a class="prev" onclick="plusSlides(-1)">&#10094;</a> </div>
 
@@ -586,6 +586,8 @@
       <p style="color:white;">Designed By Gradient</p>
     </div>
   </footer>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
   <script src="home.js"></script>
 </body>
 </html>
