--- a/index.html
+++ b/index.html
@@ -382,7 +382,6 @@
               <br>
               <div style="display: flex; justify-content: center; align-items: center;" class="">
 
-              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 1rem;" src="Images/instagram-brands.svg" alt="">
               <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedin-in-brands.svg" alt="">
               <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
 
@@ -404,7 +403,6 @@
               <br>
               <div style="display: flex; justify-content: center; align-items: center;" class="">
 
-              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 1rem;" src="Images/instagram-brands.svg" alt="">
               <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedin-in-brands.svg" alt="">
               <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
 
@@ -426,10 +424,47 @@
               <br>
               <div style="display: flex; justify-content: center; align-items: center;" class="">
 
-              <img style="cursor: pointer;width: 2rem; display:block; padding-right: 1rem;" src="Images/instagram-brands.svg" alt="">
               <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedin-in-brands.svg" alt="">
               <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
             </div>
+            </div>
+          </div>
+          <div class="column" data-aos= "fade-up">
+            <div class="card">
+              <div class="card-img teamimg">
+                <img src="Images/person.jpg" alt="">
+              </div>
+              <div class="header">
+                <h1>Sai Abhilash</h1>
+              </div>
+              <p>Graphic Designer</p>
+              <br>
+              <div style="display: flex; justify-content: center; align-items: center;" class="">
+
+              <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedin-in-brands.svg" alt="">
+              <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
+
+            </div>
+
+            </div>
+          </div>
+          <div class="column" data-aos= "fade-up">
+            <div class="card">
+              <div class="card-img teamimg">
+                <img src="Images/person.jpg" alt="">
+              </div>
+              <div class="header">
+                <h1>Sai Abhilash</h1>
+              </div>
+              <p>Graphic Designer</p>
+              <br>
+              <div style="display: flex; justify-content: center; align-items: center;" class="">
+
+              <img style="cursor: pointer;width: 1.8rem; display:block;" src="Images/linkedin-in-brands.svg" alt="">
+              <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
+
+            </div>
+
             </div>
           </div>
         </div>
@@ -582,9 +617,17 @@
   </div>
   <footer>
     <div class="copyright">
+      <div class="footer-info">
+
       <p style="color:white;">Copyright @ 2021</p>
       <p style="color:white;">Designed By Gradient</p>
     </div>
+      <div class="footer-icons">
+
+    <img style="cursor: pointer;width: 1.8rem; display:block; color: white;" src="Images/linkedin-in-brands.svg" alt="">
+    <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
+  </div>
+  </div>
   </footer>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
