--- a/index.html
+++ b/index.html
@@ -617,15 +617,16 @@
   </div>
   <footer>
     <div class="copyright">
-      <div class="footer-info">
 
       <p style="color:white;">Copyright @ 2021</p>
       <p style="color:white;">Designed By Gradient</p>
-    </div>
       <div class="footer-icons">
 
-    <img style="cursor: pointer;width: 1.8rem; display:block; color: white;" src="Images/linkedin-in-brands.svg" alt="">
-    <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular.svg" alt="">
+    <img style="cursor: pointer;width: 1.8rem; display:block; color: white;" src="Images/linkedin-in-brands white.svg" alt="">
+    <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/envelope-regular white.svg" alt="">
+    <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/instagram-brands white.svg" alt="">
+    <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/behance-brands.svg" alt="">
+    <img style="cursor: pointer;width: 2.3rem; display:block; padding-left: 1rem;" src="Images/github-brands.svg" alt="">
   </div>
   </div>
   </footer>
