modified some changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="overlay__content">
       <a onclick="closeNav()" href="#home" class="bn29">HOME</a>
       <br>
-      <a onclick="closeNav()" href="#explore" class="bn29">EXPLORE</a>
+      <a onclick="closeNav()" href="#research" class="bn29">EXPLORE</a>
       <br>
       <a onclick="closeNav()" href="#services" class="bn29">SERVICES</a>
       <br>
@@ -268,7 +268,22 @@
 
           </div>
         </div>
+        <div class="column">
+          <div class="card">
+            <div class="card-img">
+              <img src="Images/team.jpg" alt="">
+            </div>
+            <div class="header">
+              <h1>UI design</h1>
+            </div>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry. Lorem
+              Ipsum has been the industry's standard</p>
+            <br>
 
+            <button type="button" class="cardbutton">Learn More</button>
+          </div>
+        </div>
         <div class="column">
           <div class="card">
             <div class="card-img">
@@ -544,12 +559,17 @@
   <span class="dot" onclick="currentSlide(4)"></span>
 </div>
 
+
   </div>
   </div>
   <br>
   <br>
   <br>
   <br>
+
+  <div class="" style="text-align:center; font-size:1.3rem; margin-bottom:2rem;padding:1rem 2rem;">
+    <i>Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus a non metus auctor fringilla.</i>
+  </div>
   <div  class="end">
     <div class="address" >
       <div class="header">
