--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gradient</title>
 <link rel="stylesheet" href="home.css">
+<link rel="icon" href="Images/LOGO (1).svg">
 
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -20,7 +21,7 @@
   <!-- header contains Brand name and nav elements of desktop version -->
   <header>
     <div class="nav-head">
-      <h2>GRADIENT</h2>
+      <img src="Images/Logo.svg" alt="">
     </div>
     <nav>
       <ul class="nav__links">
@@ -68,9 +69,10 @@
       <h1 >Hi, We are from Gradient</h1>
     </div>
     <div class="intro-info">
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada
-        fames ac turpis egestas. Ut arcu libero, pulvinar non massa sed,
-        accumsan scelerisque dui. Morbi purus mauris, vulputate quis felis nec, </p>
+      <p>We accelerate your ideas towards execution</p>
+      <p>Hey,
+are you interested in it?
+</p>
     </div>
     <br>
     <div class="intro-buttons">
@@ -94,8 +96,10 @@
         <h1>Research</h1>
       </div>
 
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-        Ipsum has been the industry's standard dummy text ever since the </p>
+      <p>compatible designs creative ideas, prioritized
+according to audience need. By merging collective data from one-on-one
+interactions, surveys, and competitor analysis into a holistic appealing design.
+ </p>
     </div>
   </div>
 
@@ -112,8 +116,12 @@
         <h1>Market Analysis</h1>
       </div>
 
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-        Ipsum has been the industry's standard dummy text ever since thes</p>
+      <p>estimating market
+value is difficult because of the illiquid assets. For a better makeover
+point. we consider all the aspects affecting the market price such as
+fluctuating, debts, future need, initial budget. Synchronously, we decide on a
+genuine market price.
+</p>
 
     </div>
 
@@ -129,8 +137,9 @@
     </div>
     <br>
     <div class="info">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-        Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      <p>Knowing about things are much important so, these things
+we mainly focus on
+</p>
     </div>
     <br>
     <div class="workinfo-mobile mobile">
@@ -171,9 +180,9 @@
           <h2>Concept</h2>
         </div>
         <div class="para">
-          <p>Lorem Ipsum is simply
-            dummy text of the
-            printing and typesetting</p>
+          <p>learning about the user
+and their behaviour, goals, motivation, and needs
+</p>
         </div>
       </div>
       <div class="subinfo">
@@ -181,9 +190,9 @@
           <h2>Demonstrate</h2>
         </div>
         <div class="para">
-          <p>Lorem Ipsum is simply
-            dummy text of the
-            printing and typesetting</p>
+          <p>pre-development which is either clickable or tangible (I don’t think It is
+effective it requires Lil bit development)
+</p>
         </div>
       </div>
       <div class="subinfo">
@@ -191,9 +200,7 @@
           <h2>Budget</h2>
         </div>
         <div class="para">
-          <p>Lorem Ipsum is simply
-            dummy text of the
-            printing and typesetting</p>
+          <p>fair price as per the market value</p>
         </div>
       </div>
       <div class="subinfo">
@@ -201,9 +208,9 @@
           <h2>Development</h2>
         </div>
         <div class="para">
-          <p>Lorem Ipsum is simply
-            dummy text of the
-            printing and typesetting</p>
+          <p>design sign user flows, creating a fine
+representation of a design and user-friendly product
+</p>
         </div>
       </div>
       <div class="subinfo">
@@ -211,9 +218,9 @@
           <h2>Launch</h2>
         </div>
         <div class="para">
-          <p>Lorem Ipsum is simply
-            dummy text of the
-            printing and typesetting</p>
+          <p>submitting work on time and gathering feedback
+from users
+</p>
         </div>
       </div>
     </div>
@@ -228,7 +235,9 @@
     </div>
     <br>
     <div class="our-info">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the , when an</p>
+      <p>These
+are the services which we provide
+</p>
     </div>
     <br><br><br>
     <!-- in cardbody there are different elements of cards with the class column  which can be modified individually -->
@@ -312,7 +321,7 @@
     </div>
     <br>
     <div class="our-info">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting </p>
+      <p>A mirror image of our work</p>
 
     </div>
     <br>
@@ -379,7 +388,9 @@
     </div>
     <br>
     <div class="our-info">
-      <p>Lorem Ipsum is simply dummy text of the printing and </p>
+      <p>Alone
+we can do so little, together we can do much
+</p>
 </div>
     <br><br>
     <div class="team-cards">
@@ -568,7 +579,8 @@
   <br>
 
   <div class="" style="text-align:center; font-size:1.3rem; margin-bottom:2rem;padding:1rem 2rem;">
-    <i>Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus a non metus auctor fringilla.</i>
+    <i>We
+are gradient we partner with companies to design counteractive designs.</i>
   </div>
   <div  class="end">
     <div class="address" >
