--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
   <!-- header contains Brand name and nav elements of desktop version -->
   <header>
     <div class="nav-head">
+    <a href="index.html">
       <img src="Images/Logo.svg" alt="">
+
+    </a>
     </div>
     <nav>
       <ul class="nav__links">
@@ -66,10 +69,12 @@
   <!-- Here the main body starts where all the sections are divided into several divs: intro, research,MarketAnalysis,working,so on... -->
   <div id="home" class="intro section">
     <div class="head">
-      <h1 >Hi, We are from Gradient</h1>
+      <h1 >
+      We accelerate your ideas towards execution
+    </h1>
+
     </div>
     <div class="intro-info">
-      <p>We accelerate your ideas towards execution</p>
       <p>Hey,
 are you interested in it?
 </p>
