--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <!-- Here the main body starts where all the sections are divided into several divs: intro, research,MarketAnalysis,working,so on... -->
   <div id="home" class="intro section">
-    <div class="head">
+    <div class="head homehead" >
       <h1 >
       We accelerate your ideas towards execution
     </h1>
@@ -401,13 +401,13 @@ we can do so little, together we can do much
     <div class="team-cards">
       <div class="cardbody" >
         <div class="row">
-          <div class="column">
+          <div class="column team-card active">
             <div class="card">
               <div class="card-img teamimg">
                 <img src="Images/person.jpg" alt="">
               </div>
               <div class="header">
-                <h1>Sai Abhilash</h1>
+                <h1>Sai Abhilash 1</h1>
               </div>
               <p>Graphic Designer</p>
               <br>
@@ -421,14 +421,14 @@ we can do so little, together we can do much
             </div>
           </div>
 
-          <div class="column">
+          <div class="column team-card active">
             <div class="card">
               <div class="card-img teamimg">
                 <img src="Images/person.jpg" alt="">
               </div>
 
               <div class="header">
-                <h1>Sai Abhilash</h1>
+                <h1>Sai Abhilash 2</h1>
               </div>
               <p>Graphic Designer</p>
               <br>
@@ -443,13 +443,13 @@ we can do so little, together we can do much
             </div>
           </div>
 
-          <div class="column">
+          <div class="column team-card">
             <div class="card">
               <div class="card-img teamimg">
                 <img src="Images/person.jpg" alt="">
               </div>
               <div class="header">
-                <h1>Sai Abhilash</h1>
+                <h1>Sai Abhilash 3</h1>
               </div>
               <p>Graphic Designer</p>
               <br>
@@ -460,13 +460,13 @@ we can do so little, together we can do much
             </div>
             </div>
           </div>
-          <div class="column">
+          <div class="column team-card">
             <div class="card">
               <div class="card-img teamimg">
                 <img src="Images/person.jpg" alt="">
               </div>
               <div class="header">
-                <h1>Sai Abhilash</h1>
+                <h1>Sai Abhilash 4</h1>
               </div>
               <p>Graphic Designer</p>
               <br>
@@ -479,13 +479,13 @@ we can do so little, together we can do much
 
             </div>
           </div>
-          <div class="column">
-            <div class="card">
+          <div class="column team-card active">
+            <div class="card ">
               <div class="card-img teamimg">
                 <img src="Images/person.jpg" alt="">
               </div>
               <div class="header">
-                <h1>Sai Abhilash</h1>
+                <h1>Sai Abhilash 5</h1>
               </div>
               <p>Graphic Designer</p>
               <br>
@@ -515,12 +515,12 @@ we can do so little, together we can do much
     <br><br>
     <div class="testimonials-corousel">
       <div class="left-arrow">
-        <div> <a class="prev" onclick="plusSlides(-1)">&#10094;</a> </div>
+        <div> <a class="prev" >&#10094;</a> </div>
 
         <!-- <img style="transform: rotate(180deg); cursor: pointer;"src="Images/rightArrow.png" alt=""> -->
       </div>
       <div class="cardbody">
-        <div class="tcard fade">
+        <div class="tcard fade active">
           <div class="testimonial-img">
             <img src="Images/person.jpg" alt="">
           </div>
@@ -538,7 +538,7 @@ we can do so little, together we can do much
 
           </div>
         </div>
-        <div class="tcard fade active">
+        <div class="tcard fade ">
           <div class="testimonial-img">
             <img src="Images/person.jpg" alt="">
           </div>
@@ -561,7 +561,7 @@ we can do so little, together we can do much
 
       </div>
       <div class="right-arrow">
-        <div> <a class="next" onclick="plusSlides(1)">&#10095;</a> </div>
+        <div> <a class="next">&#10095;</a> </div>
 
         <!-- <img  style=" cursor: pointer;"src="Images/rightArrow.png" alt=""> -->
       </div>
@@ -569,7 +569,7 @@ we can do so little, together we can do much
         <br>
 <!-- The dots/circles -->
 <div class="dots" style="text-align:center">
-  <span class="dot " onclick="currentSlide(1)"></span>
+  <span class="dot dotactive" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
   <span class="dot" onclick="currentSlide(4)"></span>
